# manifest-platform-core-suite

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: BACKLOG.md  CONSUMING_APP_MODEL.md  CONTRACT_MATRIX.md  ERROR_CODE_REGISTRY.md  GAP_REMEDIATION.md  HASH_CANONICAL_SPEC.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN_FORM_MONACO.md  INTENT_TAXONOMY.md  MASTER_SPEC.md  RELEASE_GATE.md  RELEASE_READINESS.md  RFC_CORE_CONTRACTS.md  RFC_ENTERPRISE_ADDENDUM.md  SCOPE.md
examples/: full_coverage_example.py  getting_started.manifest  getting_started.py
findings/: code-review-2026-03-13.md  codebase-review-2026-03-13.md  codebase-review.md  implementation_plan.md
src/mpc/: __init__.py
tests/: conftest.py  test_acl.py  test_acl_advanced.py  test_advanced_policies.py  test_ast.py  test_canonical.py  test_compose.py  test_conformance_runner.py  test_contracts.py  test_coverage_edge_cases.py  test_errors.py  test_expr.py  test_governance.py  test_governance_kms.py  test_imports.py  test_lifecycle_mastery.py  test_meta.py  test_new_features.py  test_overlay.py  test_parser.py  test_persistence_redis.py  test_phase3.py  test_phase7_mastery.py  test_phase_12_validation.py  test_policy.py  test_production_mastery.py  test_redaction.py  test_registry.py  test_resilience_mastery.py  test_security.py  test_uischema.py  test_validator.py  test_workflow.py  test_workflow_history.py
tooling/mpc-runtime/: README.md  (+1 more)
tools/: CONFORMANCE_RUNNER_SPEC.md  diagnostic.py  run-release-gate.ps1
(+251 files in other folders)
